@@ -182,14 +182,13 @@ public class Expand extends Task {
             String name = entryName;
             boolean included = false;
             for (int v = 0; v < patternsets.size(); v++) {
+                included = true;
                 PatternSet p = (PatternSet) patternsets.elementAt(v);
                 String[] incls = p.getIncludePatterns(getProject());
                 if (incls != null) {
                     for (int w = 0; w < incls.length; w++) {
-                        boolean isIncl =
-                            DirectoryScanner.match(incls[w], name);
-                        if (isIncl) {
-                            included = true;
+                        included = DirectoryScanner.match(incls[w], name);
+                        if (included) {
                             break;
                         }
                     }
@@ -197,10 +196,8 @@ public class Expand extends Task {
                 String[] excls = p.getExcludePatterns(getProject());
                 if (excls != null) {
                     for (int w = 0; w < excls.length; w++) {
-                        boolean isExcl =
-                            DirectoryScanner.match(excls[w], name);
-                        if (isExcl) {
-                            included = false;
+                        included = !(DirectoryScanner.match(excls[w], name));
+                        if (!included) {
                             break;
                         }
                     }
